--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+.button{
+    background-color: #333333;  
+    color: #ffffff;
+    padding: 10px 15px 
+}
 a{
     text-decoration: none;
     color: #000000;
@@ -8,8 +13,9 @@ a:hover{
 a:active{
     color: green;
 }
-a:visited{
-    columns: #000000;
+.button:hover{
+    background-color: red;
+    color: white;
 }
 body{
     color: #555555;
@@ -20,6 +26,12 @@ body{
     line-height: 1.6em;
     margin:0;
     text-align: center;
+}
+.my-form input[type="submit"]{
+    background-color: #333333;  
+    color: #ffffff;
+    padding: 10px 15px 
+    border:none;
 }
 .container{
     width: 80%;
@@ -60,4 +72,24 @@ body{
     padding-bottom: 6px;
     border-bottom: 1px #333333;
     list-style-image: url('../images/check.png');
+}
+.my-form{
+    padding: 20px;
+}
+.my-form .form-group{
+    padding-bottom: 15px;
+}
+.my-form label{
+    display: block;
+}
+.my-form input[type=text], input[type=email], textarea{
+    padding: 8px;
+    width:100%;
+}
+.block{
+    float: left;
+    width: 33.3%;
+    border:1px solid #ccc;
+    padding:10px;
+    box-sizing: border-box;
 }
