--- a/index.css
+++ b/index.css
@@ -7,6 +7,9 @@ a{
     text-decoration: none;
     color: #000000;
 }
+.clr{
+    clear:both;
+}
 a:hover{
     color: red;
 }
@@ -92,4 +95,51 @@ body{
     border:1px solid #ccc;
     padding:10px;
     box-sizing: border-box;
+}
+#main-block{
+    float: left;
+    width: 70%;
+    box-sizing: border-box;
+}
+#sidebar{
+    float: right;
+    width: 30%;
+    background-color: #333333;
+    color: #ffffff;
+    padding: 15px;
+    box-sizing: border-box;
+}
+.p-box{
+    width: 800px;
+    height: 500px;
+    border:1px solid #000000;
+    margin-top: 30px;
+    position:relative;
+    background-image: url(https://i.imgur.com/BUkdsMR.png);
+}
+.p-box h1{
+    position:absolute;
+    top:100px;
+    left:200px;
+}
+.p-box h2{
+    position:absolute;
+    bottom: 40px;
+    right: 100px;
+    }
+.fix-me{
+    position: fixed;
+    top: 400px;
+}
+.my-list li:first-child{
+    background-color: red;
+}
+.my-list li:last-child{
+    background-color: blue;
+}
+.my-list li:nth-child(5){
+    background: yellow;
+}
+.my-list li:nth-child(even){
+    background-color: green;
 }
